@@ -2,6 +2,8 @@
 
 * Minor enhancements
 
+  * Initialize Rack::Test::Sessions with Rack::MockSessions instead of apps.
+    This change should help integration with other Ruby web frameworks (like Merb).
   * Support sending bodies for PUT requests (Larry Diehl)
 
 == 0.3.0 / 2009-05-17
